# quibraries

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  pyproject.toml  requirements.txt  requirements_prod.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  lint_and_test.yml  releaser.yml
docs/: CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  README.rst  conf.py  index.rst  modules.rst
docs/stubs/: quibraries.search.Search.rst
quibraries/: __init__.py  arg_ops.py  base.py  consts.py  errors.py  helpers.py  http_ops.py  remote_sess.py  search.py  search_helpers.py  search_ops.py  subscribe.py  subscribe_helpers.py  subscribe_ops.py
src/quibraries/: __init__.py  base.py  errors.py  helpers.py  remote_sess.py  search.py  search_helpers.py
tests/: conftest.py  test_pagination.py  test_platforms.py  test_projects.py  test_repositories.py  test_subscription.py  test_users.py
