[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[flake8]
exclude = .git,*migrations*,venv
max-line-length = 119
extend-ignore = E203, W503

[isort]
known_third_party = pyexpect,pytest,requests,setuptools,urllib3
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 119

[pylint]
# number of lines to nag about
max-line-length = 119

# Minimum lines number of a similarity.
min-similarity-lines=7

# Ignore comments when computing similarities.
ignore-comments=yes

# Ignore docstrings when computing similarities.
ignore-docstrings=yes

# Ignore imports when computing similarities.
ignore-imports=yes

# Ignore the virtual environment
ignore=venv

[pylint.messages_control]
# disable = C0330, C0326

[tool:pytest]
python_files = *.py
testpaths =
    tests
